-Removed VLCJ library. -Created a database for max score, but not implementd yet. -Select level is bug. -Create new Home, but not implemented yet. -Adaptation of the whole for the use of each of its functionality by jar. -Little bug running Sprite Estractor -> File -> ToAcFile by jar File. -Fixed some performance problems. -Fixed settings Window. -Improved Graphics by adding: life counter, coin counter and  points counter. -If connected to database, it will save the end level maximum points, and shows at the end of the level the global record for that level. -Login frame not completed yet. -Connection to the SuperLuigi website not executed yet. -Minor bug fixed.